tests/invalid/bytearray_clear_wrong_args/main.py
def run_case() -> None:
    ba: bytearray = bytearray(b"hi")

    ba.clear(1)

if __name__ == "__main__":
    run_case()
